Shapes on Small Screens Fix

--- a/style.css
+++ b/style.css
@@ -878,8 +878,4 @@ SHAPES
     .project__description--title {
         font-size: 20px;
     }
-
-    .shape {
-        display: none;
-    }
 } 
